[gd_scene load_steps=30 format=3 uid="uid://cdgy511b1qc6k"]

[ext_resource type="Texture2D" uid="uid://b8q44begovlgc" path="res://assets/textures/enemies/summoner.png" id="1_dcumm"]
[ext_resource type="Script" path="res://Scenes/Enemies/enemy.gd" id="1_qhjqg"]
[ext_resource type="Script" path="res://Scripts/finite_state_machine.gd" id="2_tbqav"]
[ext_resource type="Script" path="res://Scenes/Enemies/enemy_attack_state.gd" id="3_k0ajt"]
[ext_resource type="Script" path="res://Scripts/attack_area.gd" id="3_m5p3o"]
[ext_resource type="Script" path="res://Scenes/Enemies/enemy_death_state.gd" id="3_yykyw"]
[ext_resource type="Script" path="res://Scenes/Enemies/enemy_hit_state.gd" id="4_t0dna"]
[ext_resource type="Script" path="res://Scenes/Enemies/enemy_idle_state.gd" id="5_sabo8"]
[ext_resource type="Script" path="res://Scenes/Enemies/Summoner/summoner_prepare_rat_attack.gd" id="7_aqt00"]
[ext_resource type="Script" path="res://Scenes/Enemies/Summoner/summoner_summon_state.gd" id="7_itk3g"]
[ext_resource type="Script" path="res://Scenes/Enemies/Summoner/summoner_rat_attack_state.gd" id="7_qnwt1"]
[ext_resource type="Script" path="res://Scenes/Enemies/Summoner/summoner_run_state.gd" id="7_u30dc"]
[ext_resource type="AudioStream" uid="uid://brdra1j0duobh" path="res://assets/sfx/summoner/enemy_spawn.wav" id="11_rgskv"]
[ext_resource type="AudioStream" uid="uid://do7h7p1ueo1sh" path="res://assets/sfx/summoner/knife_attack.wav" id="11_xl6hp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbys2"]
size = Vector2(18, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ilwy8"]
size = Vector2(16, 9)

[sub_resource type="Animation" id="Animation_dgyer"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/RatAttackArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qrsv7"]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_gwyfo"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1)]
}

[sub_resource type="Animation" id="Animation_rplr7"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_eptuq"]
resource_name = "idle"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_feia2"]
resource_name = "knife_run"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_jwcme"]
resource_name = "rat_attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5), Vector2i(6, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/RatAttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_jiknl"]
resource_name = "run"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6)]
}

[sub_resource type="Animation" id="Animation_4f4bf"]
resource_name = "summon"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7), Vector2i(6, 7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grd66"]
_data = {
"RESET": SubResource("Animation_dgyer"),
"attack": SubResource("Animation_qrsv7"),
"death": SubResource("Animation_gwyfo"),
"hit": SubResource("Animation_rplr7"),
"idle": SubResource("Animation_eptuq"),
"knife_run": SubResource("Animation_feia2"),
"rat_attack": SubResource("Animation_jwcme"),
"run": SubResource("Animation_jiknl"),
"summon": SubResource("Animation_4f4bf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vw8h"]
size = Vector2(13, 28)

[sub_resource type="CircleShape2D" id="CircleShape2D_ug0ic"]
radius = 146.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ev23d"]
size = Vector2(19, 28)

[node name="Summoner" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 36
script = ExtResource("1_qhjqg")
health = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -13)
texture = ExtResource("1_dcumm")
flip_h = true
hframes = 9
vframes = 8

[node name="AttackArea" type="Area2D" parent="Sprite2D"]
collision_layer = 0
script = ExtResource("3_m5p3o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/AttackArea"]
position = Vector2(22, 5)
shape = SubResource("RectangleShape2D_sbys2")
disabled = true

[node name="RatAttackArea" type="Area2D" parent="Sprite2D"]
collision_layer = 0
script = ExtResource("3_m5p3o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/RatAttackArea"]
position = Vector2(-21, 6.5)
shape = SubResource("RectangleShape2D_ilwy8")
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="Sprite2D"]
position = Vector2(0, -5)
target_position = Vector2(40, 0)
collision_mask = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_grd66")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -14)
shape = SubResource("RectangleShape2D_2vw8h")

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_tbqav")
initial_state = NodePath("Idle")

[node name="Attack" type="Node" parent="FSM"]
script = ExtResource("3_k0ajt")
sound1 = ExtResource("11_xl6hp")

[node name="Death" type="Node" parent="FSM"]
script = ExtResource("3_yykyw")

[node name="Hit" type="Node" parent="FSM"]
script = ExtResource("4_t0dna")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("5_sabo8")

[node name="Summon" type="Node" parent="FSM"]
script = ExtResource("7_itk3g")
sound = ExtResource("11_rgskv")

[node name="RatAttack" type="Node" parent="FSM"]
script = ExtResource("7_qnwt1")
sound = ExtResource("11_xl6hp")

[node name="PrepareRatAttack" type="Node" parent="FSM"]
script = ExtResource("7_aqt00")

[node name="Run" type="Node" parent="FSM"]
script = ExtResource("7_u30dc")
distance_to_player = 80
attack_distance = 25

[node name="AttackTimer" type="Timer" parent="FSM/Run"]
wait_time = 2.0
one_shot = true

[node name="SummonTimer" type="Timer" parent="FSM/Run"]
wait_time = 10.0
one_shot = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_ug0ic")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(-2.5, -14)
shape = SubResource("RectangleShape2D_ev23d")

[connection signal="area_entered" from="Sprite2D/AttackArea" to="Sprite2D/AttackArea" method="_on_area_entered"]
[connection signal="area_entered" from="Sprite2D/RatAttackArea" to="Sprite2D/RatAttackArea" method="_on_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="FSM/Idle" method="_on_detection_area_body_entered"]
